--- a/top-right.html
+++ b/top-right.html
@@ -86,9 +86,9 @@
     
     <script>
         //***edit this only for your information***
-        const player = "M. HIGHTOWER";
-        const agency = "LOS SANTOS POLICE DEPARTMENT";
-        const callsign = "[272]";
+        const player = "cin123456_2";
+        const agency = "Stateview Correctional Facility";
+        const callsign = "[FD]";
         //***        end edit this only         ***
     
         var d,h,m,s,animate;
